--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ img {
 }
 .header-icon {
   margin-right: 10px;
-  fill: var(--primery-gray-color);
+  fill: currentColor;
 }
 
 /* HERO */
@@ -223,14 +223,14 @@ img {
   margin-right: 30px;
 }
 .features-list-item {
-  flex-basis: calc((1170px - 90px) / 4);
+  flex-basis: calc((1200px - 90px) / 4);
 }
 /* END FEATURE */
 /* ABOUT */
 
 .about-list {
   display: flex;
-  margin: auto;
+  justify-content: space-between;
 }
 .about-list-item:not(:last-child) {
   margin-right: 30px;
@@ -255,6 +255,7 @@ img {
 }
 .team-list {
   display: flex;
+  justify-content: space-between;
 }
 .team-list-item {
   background: var(--primery-white-color);
@@ -304,6 +305,10 @@ img {
   fill: var(--primery-white-color);
   background-color: var(--primery-accent-color);
 }
+.team-media-link {
+  width: 20px;
+  height: 20px;
+}
 /* END TEAM */
 /* CLIENTS */
 .clients-section {
@@ -311,20 +316,21 @@ img {
 }
 .clients-list {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
-.clients-item {
+.clients-link {
   display: flex;
   justify-content: center;
-  width: 190px;
+  align-items: center;
+  width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
   fill: #afb1b8;
 }
-.clients-item:hover,
-.clients-item:focus {
+.clients-link:hover,
+.clients-link:focus {
   fill: var(--primery-accent-color);
   border: 1px solid #2196f3;
   cursor: pointer;
@@ -332,6 +338,10 @@ img {
 
 .clients-item:not(:last-child) {
   margin-right: 30px;
+}
+.clients-logo {
+  width: 106px;
+  height: 60px;
 }
 
 /* END CLIENTS */
@@ -411,7 +421,10 @@ img {
 .footer-social-list-item:not(:last-child) {
   margin-right: 10px;
 }
-
+.footer-team-media-link {
+  width: 20px;
+  height: 20px;
+}
 /* END FOOTER */
 /* PORTFOLIO */
 
@@ -479,8 +492,8 @@ img {
   margin-top: 30px;
   background: var(--primery-white-color);
 }
+.content-list-item:focus,
 .content-list-item:hover {
-  cursor: pointer;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
