--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ img {
   border: 1px solid transparent;
   border-radius: 4px;
   background-color: var(--team-background-color);
-  width: 270px;
+  width: 100%;
   height: 120px;
 }
 
@@ -223,7 +223,7 @@ img {
   margin-right: 30px;
 }
 .features-list-item {
-  flex-basis: calc((1200px - 90px) / 4);
+  flex-basis: calc((100% - 90px) / 4);
 }
 /* END FEATURE */
 /* ABOUT */
@@ -334,6 +334,7 @@ img {
   fill: var(--primery-accent-color);
   border: 1px solid #2196f3;
   cursor: pointer;
+  
 }
 
 .clients-item:not(:last-child) {
@@ -404,6 +405,7 @@ img {
 }
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 .link-text {
   font-family: var(--primery-font);
@@ -492,13 +494,18 @@ img {
   margin-top: 30px;
   background: var(--primery-white-color);
 }
-.content-list-item:focus,
-.content-list-item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+.content-list-link{
+  display: block;
+  text-decoration: none;
+}
+.content-list-link:focus,
+.content-list-link:hover {
+   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+ 
 }
 .content-img {
   display: block;
-  width: 100%;
-}
+  width: 370px;
+  height: 294px;
+
 /* END PORTFOLIO */
